# medien-diff

./: LICENSE  Makefile  README.md  pyproject.toml
medien_diff/: __init__.py  html_utils.py  models.py  sentry_utils.py  tasks.py  text.py
medien_diff/static/: diff.css
medien_diff/templates/: index.html
migrations/versions/: 2b51ed64145a_.py  2fc8c9942744_.py  6cd2c068d0bf_.py  ade6d27a6639_.py
tests/: test_text.py
