[tool.poetry]
name = "medien-diff"
version = "0.1.0"
description = ""
authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
rq = "^1.4.3"
flask-admin = "^1.5.6"
sentry-sdk = "^0.16.0"
blinker = "^1.4"
requests = "^2.24.0"
lxml = "^4.5.1"
cssselect = "^1.1.0"
psycopg2-binary = "^2.8.5"
rq-dashboard = "^0.6.1"
flask-migrate = "^2.5.3"
flask-sqlalchemy = "^2.4.3"
tweepy = "^3.8.0"
simplediff = "^1.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
